discussion/kv_engine/150164/150164_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-45236: Move ItemPager/PagingVisitor to use cb::Semaphore

Preparation for creating multiple PagingVisitors in the future.

Change-Id: Ibc5c2355b6977ba6f668f37b49ce96c74a932e7b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2021-03-31 16:11:23.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-03-31 16:35:47.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29764/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/item_pager.cc:36:10:
fatal error: "platform/semaphore.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29764/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34686/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\item_pager.cc(36): fatal error C1083: Cannot open include file: "platform/semaphore.h": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34686/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8038/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/item_pager.cc:36:10: error: "platform/semaphore.h" file not found [clang-diagnostic-error]
#include <platform/semaphore.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/paging_visitor.cc:32:10: error: "platform/semaphore.h" file not found [clang-diagnostic-error]
#include <platform/semaphore.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/evp_store_durability_test.cc:45:10: error: "platform/semaphore.h" file not found [clang-diagnostic-error]
#include <platform/semaphore.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:40:10: error: "platform/semaphore.h" file not found [clang-diagnostic-error]
#include <platform/semaphore.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8038/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/item_pager.cc:36:10:
error: "platform/semaphore.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8038/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17535/ : FAILURE

Compile error at [2021-03-31T16:34:00.139Z] ../kv_engine/engines/ep/src/item_pager.cc:36:10:
fatal error: "platform/semaphore.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17535/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8690/ : FAILURE

Compile error at [2021-03-31T16:18:06.032Z] ../kv_engine/engines/ep/src/item_pager.cc:36:10:
fatal error: "platform/semaphore.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8690/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9762/ : FAILURE

Compile error at [2021-03-31T16:31:10.431Z] ../kv_engine/engines/ep/src/item_pager.cc:36:10:
fatal error: platform/semaphore.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9762/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9625/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9987/ : FAILURE

Compile error at [2021-03-31T16:28:36.539Z] ../kv_engine/engines/ep/src/item_pager.cc:36:10:
fatal error: "platform/semaphore.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9987/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/6582/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-04-06 11:02:06.000000000
Message: 
Patch Set 1:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34751/ : FAILURE

Failure of GoogleTest "Ephemeral/STEphemeralItemPagerTest.ReplicaNotPaged/ephemeral_auto_delete":

<pre>
[ RUN      ] Ephemeral/STEphemeralItemPagerTest.ReplicaNotPaged/ephemeral_auto_delete
..\kv_engine\engines\ep\tests\module_tests\item_pager_test.cc(329): error: Expected equality of these values:
  initialNonIoTasks + 1
    Which is: 3
  lpNonioQ.getFutureQueueSize()
    Which is: 2
..\kv_engine\engines\ep\tests\module_tests\item_pager_test.cc(1408): error: Expected: (store->getVBucket(active_vb)->getNumItems()) < (active_count), actual: 137 vs 137
Active count should have decreased after Item Pager
[  FAILED  ] Ephemeral/STEphemeralItemPagerTest.ReplicaNotPaged/ephemeral_auto_delete, where GetParam() = ("ephemeral", "auto_delete") (14 ms)
Ephemeral/STEphemeralItemPagerTest.ReplicaNotPaged/ephemeral_auto_delete
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34751/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9681/ : FAILURE

Failure of GoogleTest "Ephemeral/STEphemeralItemPagerTest.ReplicaNotPaged/ephemeral_auto_delete":

<pre>
[ RUN      ] Ephemeral/STEphemeralItemPagerTest.ReplicaNotPaged/ephemeral_auto_delete
[2021-04-06T10:21:28.107Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:329: Failure
[2021-04-06T10:21:28.107Z] Expected equality of these values:
[2021-04-06T10:21:28.107Z]   initialNonIoTasks + 1
[2021-04-06T10:21:28.107Z]     Which is: 3
[2021-04-06T10:21:28.107Z]   lpNonioQ.getFutureQueueSize()
[2021-04-06T10:21:28.107Z]     Which is: 2
[2021-04-06T10:21:28.107Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1408: Failure
[2021-04-06T10:21:28.107Z] Expected: (store->getVBucket(active_vb)->getNumItems()) < (active_count), actual: 140 vs 140
[2021-04-06T10:21:28.107Z] Active count should have decreased after Item Pager
[2021-04-06T10:21:28.107Z] [  FAILED  ] Ephemeral/STEphemeralItemPagerTest.ReplicaNotPaged/ephemeral_auto_delete, where GetParam() = ("ephemeral", "auto_delete") (133 ms)
Ephemeral/STEphemeralItemPagerTest.ReplicaNotPaged/ephemeral_auto_delete
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9681/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9817/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8747/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STItemPagerTest.ServerQuotaReached/ephemeral_auto_delete":

<pre>
[ RUN      ] EphemeralOrPersistent/STItemPagerTest.ServerQuotaReached/ephemeral_auto_delete
[2021-04-06T09:33:47.563Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:329: Failure
[2021-04-06T09:33:47.563Z] Expected equality of these values:
[2021-04-06T09:33:47.563Z]   initialNonIoTasks + 1
[2021-04-06T09:33:47.563Z]     Which is: 3
[2021-04-06T09:33:47.563Z]   lpNonioQ.getFutureQueueSize()
[2021-04-06T09:33:47.563Z]     Which is: 2
[2021-04-06T09:33:47.563Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:384: Failure
[2021-04-06T09:33:47.563Z] Expected: (stats.getPreciseTotalMemoryUsed() - val) < (stats.mem_low_wat.load()), actual: 1698464 vs 1278373
[2021-04-06T09:33:47.563Z] Expected to be below low watermark after running item pager
[2021-04-06T09:33:47.563Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:389: Failure
[2021-04-06T09:33:47.563Z] Expected: (numResidentItems) < (count), actual: 417 vs 417
[2021-04-06T09:33:47.563Z] [  FAILED  ] EphemeralOrPersistent/STItemPagerTest.ServerQuotaReached/ephemeral_auto_delete, where GetParam() = ("ephemeral", "auto_delete") (14 ms)
EphemeralOrPersistent/STItemPagerTest.ServerQuotaReached/ephemeral_auto_delete
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8747/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29819/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8110/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/6654/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17596/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10043/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
